[package]
name = "robot_ik_base"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "robot_ik_base"

[dependencies]
once_cell = "*"
urdf-rs = "*"
libc = "0"
optimization_engine = {git = "https://github.com/kpwelsh/optimization-engine-wasm" }
nalgebra = "0.26"
k = "0.25"
